--- a/css/new-style.css
+++ b/css/new-style.css
@@ -36,6 +36,11 @@ body {
   .chamada {
     transform: scale(0.8);
     flex-direction: column !important; }
+    .chamada .separador {
+      background: #4e4b387d;
+      width: 100% !important;
+      height: 1px !important;
+      margin: 15px 0 !important; }
 
   .racipe-pagina #section__temas ul.items__temas {
     margin-left: 30px !important; }
@@ -73,23 +78,30 @@ h2, h4 {
   .racipe-pagina #section__home .chamada {
     font-weight: 900;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     color: #4e4b38;
     margin-bottom: 20px;
-    align-items: center; }
+    align-items: center;
+    transform: scale(0.9); }
+    .racipe-pagina #section__home .chamada span.point {
+      font-size: 30px; }
+    .racipe-pagina #section__home .chamada .separador {
+      background: #4e4b387d;
+      width: 100%;
+      height: 1px;
+      margin: 8px; }
     .racipe-pagina #section__home .chamada .chamada__top {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      border: 2px solid #8e966191;
-      padding: 15px; }
+      align-items: center; }
       .racipe-pagina #section__home .chamada .chamada__top .chamada__top--left {
-        font-size: 65px;
+        font-size: 78px;
         font-weight: 900;
-        line-height: 65px; }
+        line-height: 45px; }
       .racipe-pagina #section__home .chamada .chamada__top .chamada__top--right {
-        font-size: 20px;
-        font-weight: 400; }
+        font-size: 28px;
+        font-weight: 400;
+        line-height: 35px; }
         .racipe-pagina #section__home .chamada .chamada__top .chamada__top--right b {
           font-weight: 900; }
         .racipe-pagina #section__home .chamada .chamada__top .chamada__top--right .right__top,
@@ -97,12 +109,12 @@ h2, h4 {
           display: flex;
           justify-content: center; }
         .racipe-pagina #section__home .chamada .chamada__top .chamada__top--right .right__bottom {
-          font-size: 20.5px; }
+          font-size: 28.5px; }
     .racipe-pagina #section__home .chamada .chamada__bottom {
-      font-size: 128px;
+      font-size: 30px;
       font-weight: 900;
-      line-height: 110px;
-      padding: 15px; }
+      line-height: 80px;
+      opacity: .4; }
   .racipe-pagina #section__home #nextSection {
     filter: invert(1); }
 .racipe-pagina #section__infosProduto img {
