--- a/css/new-style.scss
+++ b/css/new-style.scss
@@ -64,6 +64,14 @@ body {
     .chamada {
         transform: scale(0.8);
         flex-direction: column !important;
+
+        .separador {
+            background: #4e4b387d;
+            width: 100% !important;
+            height: 1px!important;
+            margin: 15px 0 !important;
+        }
+
     }
 
 
@@ -151,28 +159,42 @@ h2,h4 {
         .chamada {
             font-weight: 900;
             display: flex;
-            flex-direction: row;
-            color: $colorPrimary;
+            flex-direction: column;
+            color: #4e4b38;
             margin-bottom: 20px;
             align-items: center;
+            transform: scale(0.9);
             
     
+            span.point {
+                font-size: 30px;
+            }
+
+            .separador {
+                background: #4e4b387d;
+                width: 100%;
+                height: 1px;
+                margin: 8px;
+            }
+
             .chamada__top {
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                border: 2px solid #8e966191;
-                padding: 15px;
+                // border: 2px solid #8e966191;
+                // padding: 15px;
     
                 .chamada__top--left {
-                    font-size: 65px;
+                    font-size: 78px;
                     font-weight: 900;
-                    line-height: 65px;
+                    line-height: 45px;
                 }
+
     
                 .chamada__top--right {
-                    font-size: 20px;
+                    font-size: 28px;
                     font-weight: 400;
+                    line-height: 35px;
                     b {
                         font-weight: 900;
                     }
@@ -184,17 +206,17 @@ h2,h4 {
                     }
 
                     .right__bottom {
-                        font-size: 20.5px;
+                        font-size: 28.5px;
                     }
                 }
     
             }
     
             .chamada__bottom {
-                font-size: 128px;
+                font-size: 30px;
                 font-weight: 900;
-                line-height: 110px;
-                padding: 15px;
+                line-height: 80px;
+                opacity: .4;
             }
     
         }
